--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <ListPreference
+        android:icon="@drawable/ic_theme"
+        app:dialogTitle="@string/SETTINGS_THEME_DIALOG_TITLE"
+        app:entries="@array/theme_settings"
+        app:entryValues="@array/theme_settings_values"
+        app:key="theme"
+        app:title="@string/SETTINGS_THEME_TITLE"
+        app:useSimpleSummaryProvider="true" />
 
-    <PreferenceCategory app:title="@string/SETTINGS_DISPLAY_TITLE">
+    <ListPreference
+        android:icon="@drawable/ic_language"
+        app:entries="@array/language_settings"
+        app:entryValues="@array/language_settings_values"
+        app:key="language"
+        app:title="@string/SETTINGS_LANGUAGE_TITLE"
+        app:useSimpleSummaryProvider="true" />
 
-        <ListPreference
-            app:dialogTitle="@string/SETTINGS_THEME_DIALOG_TITLE"
-            app:entries="@array/theme_settings"
-            app:entryValues="@array/theme_settings_values"
-            app:key="theme"
-            app:title="@string/SETTINGS_THEME_TITLE"
-            app:useSimpleSummaryProvider="true" />
+    <Preference
+        app:key="market"
+        app:title="@string/SETTINGS_PAGE_MARKET" />
 
-        <ListPreference
-            app:entries="@array/language_settings"
-            app:entryValues="@array/language_settings_values"
-            app:key="language"
-            app:title="@string/SETTINGS_LANGUAGE_TITLE"
-            app:useSimpleSummaryProvider="true" />
-
-        <Preference
-            app:key="market"
-            app:title="@string/SETTINGS_PAGE_MARKET" />
-
-        <Preference
-            app:key="notifications"
-            app:title="@string/SETTINGS_NOTIFICATIONS_TITLE" />
-
-    </PreferenceCategory>
+    <Preference
+        android:icon="@drawable/ic_notification"
+        android:widgetLayout="@layout/notification_preference_image"
+        app:key="notifications"
+        app:title="@string/SETTINGS_NOTIFICATIONS_TITLE" />
 
 </PreferenceScreen>
