--- a/app/src/main/res/layout/payment_history_header.xml
+++ b/app/src/main/res/layout/payment_history_header.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/base_margin_double"
-    android:layout_marginTop="@dimen/base_margin_quadruple"
+    android:layout_marginTop="@dimen/base_margin_quintuple"
     android:layout_marginEnd="@dimen/base_margin_double"
     android:text="@string/PAYMENTS_SUBTITLE_PREVIOUS_PAYMENTS"
-    android:textAppearance="?textAppearanceSubtitle1" />
+    android:textAppearance="?textAppearanceHeadline6" />
