--- a/app/src/main/res/drawable/ic_info_more_options.xml
+++ b/app/src/main/res/drawable/ic_info_more_options.xml
@@ -1,16 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:pathData="M11.25,17.5V10.5H12.75V17.5H11.25Z"
-      android:fillColor="#121212"/>
-  <path
-      android:pathData="M12,8.875C12.6904,8.875 13.25,8.3154 13.25,7.625C13.25,6.9346 12.6904,6.375 12,6.375C11.3096,6.375 10.75,6.9346 10.75,7.625C10.75,8.3154 11.3096,8.875 12,8.875Z"
-      android:fillColor="#121212"/>
-  <path
-      android:pathData="M12,22C17.5228,22 22,17.5228 22,12C22,6.4771 17.5228,2 12,2C6.4771,2 2,6.4771 2,12C2,17.5228 6.4771,22 12,22ZM12,20.5C16.6944,20.5 20.5,16.6944 20.5,12C20.5,7.3056 16.6944,3.5 12,3.5C7.3056,3.5 3.5,7.3056 3.5,12C3.5,16.6944 7.3056,20.5 12,20.5Z"
-      android:fillColor="#121212"
-      android:fillType="evenOdd"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:viewportWidth="24" android:viewportHeight="24">
+    <path android:pathData="M11.25 17.5v-7h1.5v7h-1.5zM12 8.875c0.69 0 1.25-0.56 1.25-1.25s-0.56-1.25-1.25-1.25-1.25 0.56-1.25 1.25 0.56 1.25 1.25 1.25z" android:fillColor="?colorPrimary"/>
+    <path android:pathData="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-1.5c4.694 0 8.5-3.806 8.5-8.5S16.694 3.5 12 3.5 3.5 7.306 3.5 12s3.806 8.5 8.5 8.5z" android:fillColor="?colorPrimary" android:fillType="evenOdd"/>
 </vector>
