--- a/app/src/main/res/menu/choose_plan_menu.xml
+++ b/app/src/main/res/menu/choose_plan_menu.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/moreOptions"
         android:icon="@drawable/ic_more"
-        android:title="TODO moreOptions"
+        android:title="@string/embark_onboarding_more_options.screen_title"
         app:showAsAction="ifRoom" />
 </menu>
