--- a/app/src/main/res/layout/embark_message_item.xml
+++ b/app/src/main/res/layout/embark_message_item.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/message"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textAppearance="?textAppearanceBody1" />
+    android:maxWidth="@dimen/embark_chat_bubble_max_width"
+    android:theme="@style/ThemeOverlay.Hedvig.Embark.Chat.Hedvig"
+    android:textAppearance="?textAppearanceSubtitle1"
+    tools:text="Hejsan" />
