--- a/app/src/main/res/layout/fragment_text_action_set.xml
+++ b/app/src/main/res/layout/fragment_text_action_set.xml
@@ -10,6 +10,8 @@
         android:id="@+id/messages"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/base_margin_double"
+        android:layout_marginEnd="@dimen/base_margin_double"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,8 +23,12 @@
         android:id="@+id/response"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/base_margin_double"
+        android:layout_marginEnd="@dimen/base_margin_double"
         android:alpha="0"
-        android:textAppearance="?textAppearanceBody1"
+        android:maxWidth="@dimen/embark_chat_bubble_max_width"
+        android:textAppearance="?textAppearanceSubtitle1"
+        android:theme="@style/ThemeOverlay.Hedvig.Embark.Chat.Self"
         android:translationY="100dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
