--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 
     <dimen name="base_margin_half">4dp</dimen>
     <dimen name="base_margin">8dp</dimen>
+    <dimen name="base_margin_and_a_half">12dp</dimen>
     <dimen name="base_margin_double">16dp</dimen>
     <dimen name="base_margin_triple">24dp</dimen>
     <dimen name="base_margin_quadruple">32dp</dimen>
@@ -146,5 +147,5 @@
     <dimen name="peril_bottom_sheet_exception_item_size">56dp</dimen>
     <dimen name="embark_select_action_min_height">80dp</dimen>
     <dimen name="more_options_list_item_height">48dp</dimen>
-
+    <dimen name="embark_chat_bubble_max_width">250dp</dimen>
 </resources>
