--- a/app/src/main/res/menu/embark_tooltip_menu.xml
+++ b/app/src/main/res/menu/embark_tooltip_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/tooltip"
         android:icon="@drawable/ic_info_more_options"
-        android:title="TODO Tooltip"
+        android:title="@string/onboarding_embark_flow.information_modal_title"
         app:showAsAction="always" />
     <item
         android:id="@+id/moreOptions"
