Add progress bar for embark flow. Add mock data for testing.

--- a/app/src/main/res/layout/activity_embark.xml
+++ b/app/src/main/res/layout/activity_embark.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar"
+    <com.hedvig.app.feature.embark.ui.MaterialProgressToolbar
+        android:id="@+id/progressToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:navigationIcon="@drawable/ic_back"
