--- a/app/src/main/res/layout/payout_connection_status.xml
+++ b/app/src/main/res/layout/payout_connection_status.xml
@@ -1,37 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/base_margin_double"
     android:layout_marginTop="@dimen/base_margin_triple"
-    android:orientation="horizontal">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginStart="@dimen/base_margin_double"
-        android:textAppearance="?textAppearanceSubtitle1"
-        tools:text="Trustly" />
-
-    <Space
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
-
-    <TextView
-        android:id="@+id/status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/base_margin_double"
-        android:drawablePadding="@dimen/base_margin"
-        android:drawableTint="?android:textColorPrimary"
-        android:gravity="center_vertical"
-        android:text="@string/payment_screen.pay_connected_label"
-        android:textAppearance="?textAppearanceBody1"
-        android:visibility="gone"
-        app:drawableEndCompat="@drawable/ic_checkmark_in_circle"
-        tools:visibility="visible" />
-
-</LinearLayout>
+    android:drawablePadding="@dimen/base_margin"
+    android:gravity="center_vertical"
+    android:textAppearance="?textAppearanceSubtitle1"
+    tools:drawableStartCompat="@drawable/ic_checkmark_in_circle"
+    tools:text="@string/payment_screen.pay_connected_label" />
