--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="android:navigationBarColor">@color/transparent</item>
     </style>
 
-    <style name="Hedvig.Theme.Marketing" parent="Hedvig.Theme.Marketing.V23"/>
+    <style name="Hedvig.Theme.Marketing" parent="Hedvig.Theme.Marketing.V23" />
 
     <style name="Hedvig.Theme.KeyGear">
         <item name="android:navigationBarColor">@color/translucent_background</item>
@@ -40,7 +40,7 @@
         <item name="android:navigationBarColor">@color/hedvig_black</item>
     </style>
 
-    <style name="Hedvig.Theme.Splash" parent="Hedvig.Theme.Splash.V23"/>
+    <style name="Hedvig.Theme.Splash" parent="Hedvig.Theme.Splash.V23" />
 
     <style name="FullScreenDialog" parent="Hedvig.Theme">
         <item name="windowNoTitle">true</item>
@@ -62,7 +62,7 @@
         <item name="android:background">@drawable/bottom_sheet_dialog_fragment_background</item>
     </style>
 
-    <style name="BaseBottomSheetDialog" parent="@style/Theme.Design.Light.BottomSheetDialog">
+    <style name="BaseBottomSheetDialog" parent="@style/Theme.MaterialComponents.DayNight.BottomSheetDialog">
         <item name="android:windowIsFloating">false</item>
         <item name="bottomSheetStyle">@style/BottomSheet</item>
     </style>
@@ -70,27 +70,6 @@
     <style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog">
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:navigationBarColor">?colorSurface</item>
-    </style>
-
-    <style name="NoTitleBottomSheetDialogTheme" parent="BaseBottomSheetDialog">
-        <item name="bottomSheetStyle">@style/NoTitleBottomSheet</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">?colorSurface</item>
-    </style>
-
-    <style name="PerilBottomSheetDialogTheme" parent="BaseBottomSheetDialog">
-        <item name="bottomSheetStyle">@style/PerilBottomSheet</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">?colorSurface</item>
-    </style>
-
-    <style name="PerilBottomSheet">
-        <item name="android:background">@drawable/peril_bottom_sheet_background</item>
-    </style>
-
-    <style name="NoTitleBottomSheet">
-        <item name="android:background">@drawable/bottom_sheet_dialog_no_title_fragment_background
-        </item>
     </style>
 
     <style name="DialogNoAnimation">
