--- a/app/src/main/res/layout/plan_card.xml
+++ b/app/src/main/res/layout/plan_card.xml
@@ -4,18 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/plan_card_height"
+    android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/base_margin"
+    android:minHeight="@dimen/plan_card_height"
     android:theme="@style/ThemeOverlay.Hedvig.InsuranceCard"
     app:cardElevation="0dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
     app:strokeColor="@color/color_divider"
     app:strokeWidth="1dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -46,27 +43,31 @@
 
                 <TextView
                     android:id="@+id/name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:maxWidth="200dp"
+                    android:layout_weight="1"
                     android:textAppearance="?textAppearanceHeadline6"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="Contents- and travel insurance" />
+                    tools:text="Contents- and travel" />
 
                 <TextView
                     android:id="@+id/discount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="top"
                     android:layout_marginStart="@dimen/base_margin"
+                    android:layout_marginTop="5dp"
                     android:background="@drawable/background_pill"
                     android:backgroundTint="?colorPrimary"
+                    android:maxWidth="150dp"
                     android:padding="@dimen/base_margin_half"
                     android:textAppearance="?textAppearanceOverline"
                     android:theme="@style/ThemeOverlay.Hedvig.InsuranceCard.Discount"
                     android:visibility="gone"
                     tools:text="25% DISCOUNT"
                     tools:visibility="visible" />
+
             </LinearLayout>
 
             <RadioButton
@@ -91,16 +92,14 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <ImageView
-            android:id="@+id/shimmer"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:contentDescription="@null"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/shimmer_gradient" />
+    </FrameLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/shimmer"
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        android:contentDescription="@null"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/shimmer_gradient" />
 
 </com.google.android.material.card.MaterialCardView>
