--- a/app/src/main/res/layout/activity_key_gear_valuation_info.xml
+++ b/app/src/main/res/layout/activity_key_gear_valuation_info.xml
@@ -15,19 +15,13 @@
         android:background="?android:colorBackground"
         android:elevation="@dimen/top_bar_elevation"
         android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingStart="@dimen/base_margin"
-        android:paddingEnd="@dimen/base_margin">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/close"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackgroundBorderless"
+            style="@style/ToolbarIcon.Start"
             android:contentDescription="@string/KEY_GEAR_RECCEIPT_VIEW_CLOSE_BUTTON"
-            android:padding="@dimen/base_margin"
-            app:srcCompat="@drawable/ic_close"
-            app:tint="@color/icon_tint" />
+            app:srcCompat="@drawable/ic_close" />
 
         <TextView
             android:layout_width="wrap_content"
