--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -38,34 +38,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|start"
-            android:layout_marginStart="@dimen/base_margin"
             android:contentDescription="@string/CHAT_CLOSE_DESCRIPTION"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/close"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|start"
-                android:background="?attr/selectableItemBackgroundBorderless"
+                style="@style/ToolbarIcon.Start"
                 android:contentDescription="@string/CHAT_CLOSE_DESCRIPTION"
-                android:padding="@dimen/base_margin"
                 android:visibility="gone"
                 app:srcCompat="@drawable/ic_close"
                 tools:visibility="visible" />
 
             <ImageView
                 android:id="@+id/restart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|start"
-                android:layout_marginStart="@dimen/base_margin"
+                style="@style/ToolbarIcon.Start"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="@string/CHAT_CLOSE_DESCRIPTION"
-                android:padding="@dimen/base_margin"
                 android:visibility="gone"
                 app:srcCompat="@drawable/ic_restart_chat"
                 tools:visibility="visible" />
+
         </LinearLayout>
 
         <ImageView
@@ -79,16 +71,9 @@
 
         <ImageView
             android:id="@+id/settings"
-            android:layout_width="@dimen/chat_top_bar_button_size"
-            android:layout_height="@dimen/chat_top_bar_button_size"
-            android:layout_gravity="center_vertical|end"
-            android:layout_marginEnd="@dimen/base_margin_double"
-            android:background="?attr/selectableItemBackgroundBorderless"
+            style="@style/ToolbarIcon.End"
             android:contentDescription="@string/SETTINGS_ACCESSIBILITY_HINT"
-            android:padding="@dimen/base_margin_half"
-            android:visibility="visible"
-            app:srcCompat="@drawable/ic_settings"
-            tools:visibility="visible" />
+            app:srcCompat="@drawable/ic_settings" />
 
     </FrameLayout>
 
