--- a/app/src/main/res/layout/activity_receipt.xml
+++ b/app/src/main/res/layout/activity_receipt.xml
@@ -18,14 +18,9 @@
 
         <ImageView
             android:id="@+id/close"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:background="?attr/selectableItemBackgroundBorderless"
+            style="@style/ToolbarIcon.Start"
             android:contentDescription="@string/KEY_GEAR_RECCEIPT_VIEW_CLOSE_BUTTON"
-            android:padding="@dimen/base_margin"
-            app:srcCompat="@drawable/ic_close"
-            app:tint="@color/icon_tint" />
+            app:srcCompat="@drawable/ic_close" />
 
         <TextView
             android:id="@+id/receipt_title"
@@ -43,13 +38,9 @@
 
         <ImageView
             android:id="@+id/share"
-            android:layout_width="@dimen/chat_top_bar_button_size"
-            android:layout_height="@dimen/chat_top_bar_button_size"
-            android:layout_gravity="center_vertical"
+            style="@style/ToolbarIcon.End"
             android:contentDescription="@string/KEY_GEAR_RECCEIPT_VIEW_SHARE_BUTTON"
-            android:padding="@dimen/base_margin_half"
             app:srcCompat="@drawable/ic_share"
-            tools:visibility="gone"
             app:tint="@color/icon_tint" />
 
     </LinearLayout>
@@ -80,8 +71,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
             app:srcCompat="@drawable/ic_choose_file"
-            tools:visibility="visible"
-            app:tint="@color/icon_tint" />
+            app:tint="@color/icon_tint"
+            tools:visibility="visible" />
 
         <Button
             android:id="@+id/download"
